--- a/app/views/carrinho/show.html.erb
+++ b/app/views/carrinho/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Meu Carrinho de Compras</h1>
 
-<% if @cart_produtos.empty? %>
+<% if @produtos_do_carrinho.empty? %>
   <p>Seu carrinho está vazio.</p>
 <% else %>
   <table>
@@ -15,8 +15,8 @@
     </thead>
     <tbody>
     <% total_do_carrinho = 0 %>
-    <% @cart_produtos.each do |produto| %>
-      <% quantidade = session['cart'][produto.id.to_s] %>
+    <% @produtos_do_carrinho.each do |produto| %>
+      <% quantidade = session['carrinho'][produto.id.to_s] %>
       <% subtotal = produto.preco * quantidade %>
       <% total_do_carrinho += subtotal %>
       <tr>
