--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -4,7 +4,7 @@
 
 <% @produtos.each do |produto| %>
 
-  <%= button_to "Adicionar ao Carrinho", add_to_cart_path(produto), method: :post %>
+  <%= button_to "Adicionar ao Carrinho", add_to_carrinho_path(produto), method: :post %>
 
   <div id="<%= dom_id produto %>">
     <p>
