--- a/app/views/carrinho/show.html.erb
+++ b/app/views/carrinho/show.html.erb
@@ -1,41 +1,27 @@
 <h1>Meu Carrinho de Compras</h1>
 
-<% if @produtos_do_carrinho.empty? %>
+<% if @produtos_no_carrinho.try(:empty?) %>
   <p>Seu carrinho está vazio.</p>
 <% else %>
   <table>
-    <thead>
-    <tr>
-      <th>Produto</th>
-      <th>Preço</th>
-      <th>Quantidade</th>
-      <th>Subtotal</th>
-      <th>Ação</th>
-    </tr>
-    </thead>
     <tbody>
     <% total_do_carrinho = 0 %>
-    <% @produtos_do_carrinho.each do |produto| %>
-      <% quantidade = session['carrinho'][produto.id.to_s] %>
-      <% subtotal = produto.preco * quantidade %>
+    <% @produtos_no_carrinho&.each do |produto| %>
+      <%# A quantidade é pega da sessão, usando o ID do produto como chave %>
+      <% quantidade = session[:carrinho][produto.id.to_s] %>
+      <% subtotal = produto.preco * quantidade.to_i %>
       <% total_do_carrinho += subtotal %>
       <tr>
         <td><%= produto.nome %></td>
         <td><%= number_to_currency(produto.preco) %></td>
         <td><%= quantidade %></td>
         <td><%= number_to_currency(subtotal) %></td>
-        <td><%= button_to "Remover", remove_from_cart_path(produto), method: :delete %></td>
+        <td><%= button_to "Remover", remover_do_carrinho_path(produto), method: :delete %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
 
   <h3>Total: <%= number_to_currency(total_do_carrinho) %></h3>
-
-  <br>
-  <%# No futuro, este botão iniciará o processo de criação do Pedido %>
   <%= button_to "Finalizar Compra", '#', method: :get %>
 <% end %>
-
-<br>
-<%= link_to "Continuar Comprando", produtos_path %>
