--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= content_for(:title) || "Alfajor Web" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<body>
+<header>
+  <nav>
+    <%= link_to 'Home', root_path %> |
+    <%= link_to 'Ver Seu Carrinho', carrinho_path %> |
+    <%= link_to 'Ver Eventos', eventos_path %>
+    <%# Links de Devise: %>
+    <% if usuario_signed_in? %>
+      | <%= link_to 'Sair', destroy_usuario_session_path, data: { turbo_method: :delete } %>
+    <% else %>
+      | <%= link_to 'Entrar', new_usuario_session_path %>
+    <% end %>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/milligram@1.4.1/dist/milligram.min.css">
+  </nav>
+</header>
 
-    <%= yield :head %>
-
-
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-
-    <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app %>
-    <%= stylesheet_link_tag "https://cdn.simplecss.org/simple.css" %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
-</html>
+<%= yield %>
+</body>
